<resources>
    <string name="app_name">ClienteTACOSAndroid</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">¿Hambre?</string>
    <string name="nav_header_puesto_miembro">Invitado</string>
    <string name="nav_header_subtitle">¡Entra y prueba nuestro menú!</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_perfil">Perfil</string>
    <string name="menu_unirse">Unirse</string>
    <string name="menu_entrar">Entrar</string>
    <string name="menu_alimentos">Menú</string>
    <string name="menu_resenas">Reseñas</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Contraseña</string>
    <string name="prompt_nombre">Nombre(s)</string>
    <string name="prompt_direccion">Dirección</string>
    <string name="prompt_telefono">Teléfono</string>
    <string name="action_sign_in">Entra</string>
    <string name="action_sign_up">¡Únete!</string>
    <string name="action_regresar">Regresar</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"¡Hola, "</string>
    <string name="invalid_username">No es un email válido.</string>
    <string name="invalid_password">Debe tener más de 5 caracteres.</string>
    <string name="invalid_nombre">Sólo puede contener letras del alfabeto español.</string>
    <string name="login_failed">"Login failed"</string>
</resources>