<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <group android:id="@+id/grp1">
        <item
            android:id="@+id/nav_perfil"
            android:icon="@drawable/side_nav_bar"
            android:title="@string/menu_perfil" />
    </group>

    <group
        android:checkableBehavior="single"
        android:id="@+id/grp2">

        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_alimentos" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_resenas" />
    </group>
</menu>
