<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.clientetacosandroid.ui.alimentos.AlimentosFragment"
        android:label="@string/menu_alimentos"
        tools:layout="@layout/fragment_alimentos" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.clientetacosandroid.ui.gallery.GalleryFragment"
        android:label="@string/menu_alimentos"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_perfil"
        android:name="com.example.clientetacosandroid.ui.login.LoginFragment"
        android:label="@string/menu_entrar"
        tools:layout="@layout/fragment_login" >
        <action
            android:id="@+id/action_nav_perfil_to_nav_unirse"
            app:destination="@id/nav_unirse" />
    </fragment>

    <fragment
        android:id="@+id/nav_unirse"
        android:name="com.example.clientetacosandroid.ui.unirse.UnirseFragment"
        android:label="@string/menu_perfil"
        tools:layout="@layout/fragment_unirse" />
</navigation>